--- a/css/csoon.css
+++ b/css/csoon.css
@@ -206,6 +206,9 @@ a.fa {
 }
 .logo {
     display: none;
+    max-height: 400px;
+    max-width: 500px;
+
 }
 .navbar-custom.top-nav-collapse .navbar-brand .logo {
     display: inline-block;
