--- a/css/csoon.css
+++ b/css/csoon.css
@@ -296,7 +296,7 @@ a.fa {
     vertical-align: middle;
     background: rgba(0, 0, 0, 0.5);
     padding: 120px 0 50px;
-    width: 100%;
+    width: 400px;
 }
 .intro .intro-body .brand-heading {
     font-size: 40px;
